manifests/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: askmycv
  labels:
    app: askmycv
spec:
  replicas: 1
  selector:
    matchLabels:
      app: askmycv
  template:
    metadata:
      labels:
        app: askmycv
    spec:
      containers:
      - name: askmycv
        image: simoneacr.azurecr.io/askmycv:__IMAGE_TAG__
        ports:
        - containerPort: 5005
      imagePullSecrets:
        - name: acr-auth
